# cdda-stuffs

./: Cargo.toml
input/: belts.json5  boots.json5  training.json5
input/graphs/: pantry.json5  stuff.json5  stuff2.json5
input/old/: innards.json5  meat.json5  meat_healthy.json5
src/: db.rs  graphs.rs  lists.rs  main.rs  plots.rs  schema.rs  table.rs
src/graphs/: train.rs
